# C

dsp/filter/fir/real-time-fir-filter/: .gitignore  CMakeLists.txt  Makefile  README.md
dsp/filter/fir/real-time-fir-filter/.github/workflows/: ci.yml
dsp/filter/fir/real-time-fir-filter/examples/: realtime_stdin.c
dsp/filter/fir/real-time-fir-filter/include/: fir.h
dsp/filter/fir/real-time-fir-filter/src/: fir.c
dsp/filter/fir/real-time-fir-filter/tests/: test_fir.c
